{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 3,
  "lineage": "84c1dfa7-c537-0fd7-1db5-31cb99549ae4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/26b3c258-f71f-4c14-b08e-32bff9b16b5a/resourceGroups/testingARM/providers/Microsoft.Network/networkSecurityGroups/tf-nsg",
            "location": "ukwest",
            "name": "tf-nsg",
            "resource_group_name": "testingARM",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/26b3c258-f71f-4c14-b08e-32bff9b16b5a/resourceGroups/testingARM/providers/Microsoft.Network/networkSecurityGroups/tf-nsg/securityRules/test123",
            "name": "test123",
            "network_security_group_name": "tf-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "testingARM",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    }
  ]
}